# python-app-test

./: .envrc  .gitignore  flake.nix  k3d-config.yaml  pyproject.toml
flaskapp/: __init__.py  app.py
k3d-config/: k3d-config-1.yaml  k3d-config-2.yaml
kubernetes/: 01 namespace.yaml  02 nsq.yaml  03 deployment-collector.yaml
nats/: server.conf
snowplow/: requirements.txt  tracker.py
